Remove env and node_modules from repository
